# robotsix_px4_sim_interface

./: CMakeLists.txt  README.md  package.xml
action/: StartSimulation.action  StopSimulation.action
msg/: ModelInfo.msg
scripts/: start_simulation.py  stop_simulation.py
